--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">COMP2601A2</string>
+    <string name="app_name">ShiftSwapper</string>
     <string name="player_winner">You won the game.</string>
     <string name="opponent_winner">\u0020won the game.</string>
     <string name="no_winner">The game was a draw.</string>
@@ -16,9 +16,7 @@
     <string name="ttt">Tic Tac Toe</string>
     <string name="notifications_here">List of users</string>
     <string name="main_label">Multi-Client Tic Tac Toe</string>
-    <string name="ip_label">Host</string>
-    <string name="port_label">Port</string>
-    <string name="name_label">Name</string>
+
     <string name="connect_btn_label">Connect</string>
     <string name="in_hint">enter IP address</string>
     <string name="port_hint">enter port</string>
@@ -28,4 +26,22 @@
     <string name="accept">Accept</string>
     <string name="wants_to_play">" wants to play with you"</string>
     <string name="reject">Reject</string>
+    <string name="title_activity_login">Sign in</string>
+
+    <string name="password_label">Password</string>
+    <string name="ip_label">Host</string>
+    <string name="port_label">Port</string>
+    <string name="id_label">Employee ID</string>
+    <string name="title_shift_list">Shifts</string>
+    <string name="title_shift_detail">Shift Detail</string>
+    <string name="title_activity_admin">AdminActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
+    <string name="login">Login</string>
+    <string name="enter_employee_id_hint">enter employee id</string>
+    <string name="enter_password_hint">enter password</string>
+    <string name="enter_host_hint">enter ip address</string>
+    <string name="enter_port_hint">enter ip address</string>
+
+
 </resources>
